[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["Yousef Obeidat <85868033+mrobeidat@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
